--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,7 +10,7 @@
         <div class="ui dropdown item">
           Account <i class="dropdown icon"></i>
           <div class="menu">
-            <a class="item">Login</a>
+            <%= link_to 'Log In', login_path, class: "item" %>
             <a class="item">Logout</a>
             <a class="item">Signup</a>
           </div>
