--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,8 +1,6 @@
 <nav>
     <div class="ui small inverted menu">
-      <a class="item">
-        Chatroom
-      </a>
+      <%= link_to 'Chatroom', root_path, class: "item" %>
       <a class="item">
         Messages
       </a>
