--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,34 +8,18 @@
     <div class="twelve wide column">
         <div class="ui small feed chatbox">
             <h4 class="ui header">Followers Activity</h4>
+
+            <% @messages.each do |message| %>
                 <div class="event">
                     <div class="content">
                     <div class="summary">
-                        <a>Elliot Fu</a> added <a>Jenny Hess</a> as a friend
+                        <a><%= message.user.username %></a>: <%= message.body %>
                     </div>
                     </div>
                 </div>
-                <div class="event">
-                    <div class="content">
-                    <div class="summary">
-                        <a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend
-                    </div>
-                    </div>
-                </div>
-                <div class="event">
-                    <div class="content">
-                    <div class="summary">
-                        <a>Helen Troy</a> added <a>Christian Rocha</a> as a friend
-                    </div>
-                    </div>
-                </div>
-                <div class="event">
-                    <div class="content">
-                    <div class="summary">
-                        <a>Christian Rocha</a> signed up for the  site.
-                    </div>
-                    </div>
-                </div>
+
+            <% end %>
+
                 <div class="extra content">
                         <form class="ui reply form">
                             <div class="field">
