--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -9,16 +9,7 @@
         <div class="ui small feed chatbox">
             <h4 class="ui header">Followers Activity</h4>
 
-            <% @messages.each do |message| %>
-                <div class="event">
-                    <div class="content">
-                    <div class="summary">
-                        <a><%= message.user.username %></a>: <%= message.body %>
-                    </div>
-                    </div>
-                </div>
-
-            <% end %>
+            <%= render @messages %>
 
                 <div class="extra content">
                         <form class="ui reply form">
