--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,9 +8,11 @@
         <div class="ui dropdown item">
           Account <i class="dropdown icon"></i>
           <div class="menu">
-            <%= link_to 'Log In', login_path, class: "item" %>
-            <a class="item">Logout</a>
-            <a class="item">Signup</a>
+            <% if logged_in? %>
+              <%= link_to 'Log Out', logout_path, method: :delete, class: "item" %>
+            <% else %>
+              <%= link_to 'Log In', login_path, class: "item" %>
+            <% end %>
           </div>
         </div>
         <div class="item">
