--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,23 +1,18 @@
-<nav>
-    <div class="ui small inverted menu">
-      <%= link_to 'Chatroom', root_path, class: "item" %>
-      <a class="item">
-        Messages
-      </a>
-      <div class="right menu">
-        <div class="ui dropdown item">
-          Account <i class="dropdown icon"></i>
-          <div class="menu">
-            <% if logged_in? %>
-              <%= link_to 'Log Out', logout_path, method: :delete, class: "item" %>
-            <% else %>
-              <%= link_to 'Log In', login_path, class: "item" %>
-            <% end %>
-          </div>
-        </div>
-        <div class="item">
-            <div class="ui primary button">Sign Up</div>
-        </div>
+<nav class="ui small inverted menu">
+  <%= link_to 'Chatroom', root_path, class: "item" %>
+  <a class="item">
+    Messages
+  </a>
+  <div class="right menu">
+    <div class="ui dropdown item">
+      Account <i class="dropdown icon"></i>
+      <div class="menu">
+        <% if logged_in? %>
+          <%= link_to 'Log Out', logout_path, method: :delete, class: "item" %>
+        <% else %>
+          <%= link_to 'Log In', login_path, class: "item" %>
+        <% end %>
       </div>
     </div>
+  </div>
 </nav>
