--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <%= render 'layouts/navigation' %>
 
     <div class='ui container'>
+      <%= render 'layouts/notifications' %>
       <%= yield %>
     </div>
   </body>
