--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,5 +14,11 @@
         <% end %>
       </div>
     </div>
+
+    <% if logged_in? %>
+      <%= link_to 'Log Out', logout_path, method: :delete, class: "ui primary button" %>
+    <% else %>
+      <%= link_to 'Log In', login_path, class: "ui primary button" %>
+    <% end %>
   </div>
 </nav>
