--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -11,16 +11,17 @@
 
             <%= render @messages %>
 
-                <div class="extra content">
-                        <form class="ui reply form">
-                            <div class="field">
-                                <div class="ui fluid icon">
-                                    <input type="text" placeholder="Enter a message">
-                                    <i class="icon edit bordered inverted orange"></i>
-                                </div>
-                            </div>
-                        </form>
+            <div class="extra content">
+            <%= form_for(@message, html: {class:"ui reply form", role: "form"}, url: message_path) do |f| %>
+                <div class="field">
+                    <div class="ui fluid icon">
+                        <%= f.text_field :body, placeholder: "Enter a message"%>
+                        <%= f.button '<i class="icon edit bordered inverted orange"></i>'.html_safe %>
+                    </div>
                 </div>
+            <% end %>
+            </div>
+
         </div>
     </div>
 
