--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,11 +8,11 @@
     <div class="twelve wide column">
         <div class="ui small feed chatbox">
             <h4 class="ui header">Followers Activity</h4>
-
-            <%= render @messages %>
-
+             <div class="ui feed" id="message-container">
+              <%= render @messages %>
+            </div>
             <div class="extra content">
-            <%= form_for(@message, html: {class:"ui reply form", role: "form"}, url: message_path) do |f| %>
+            <%= form_for(@message, html: {class:"ui reply form", role: "form"}, url: message_path, remote: true) do |f| %>
                 <div class="field">
                     <div class="ui fluid icon">
                         <%= f.text_field :body, placeholder: "Enter a message"%>
