--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,3 +4,7 @@ $font-url: 'http://fonts.useso.com/css?family=Lato:400,700,400italic,700italic&s
 .chatbox {
     height: 500px;
 }
+
+#messages {
+    overflow: auto;
+}
