scroll tto the botttom always

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,4 +7,5 @@ $font-url: 'http://fonts.useso.com/css?family=Lato:400,700,400italic,700italic&s
 
 #messages {
     overflow: auto;
+    height: 15em;
 }
