--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,3 +9,7 @@ $font-url: 'http://fonts.useso.com/css?family=Lato:400,700,400italic,700italic&s
     overflow: auto;
     height: 15em;
 }
+
+.input button {
+    display: none;
+}
